<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="downloading">正在下载图片&#8230;</string>
    <string name="app_crash">对不起，微博崩溃了，感谢您的支持!</string>
    <string name="app_crash_oome">对不起，微博崩溃了，感谢您的支持!</string>
    <string name="test">Test</string>

    <string name="image_save_dir">保存目录</string>
    <string name="image_sdcard_not_mount">SDcard没有挂载!</string>
    <string name="image_save_dir_error">图片存储目录不正确!</string>
    <string name="image_save_suc">保存图片成功:%s</string>
    <string name="image_save_failed">保存图片失败!</string>

    <string name="trend_hourly">hourly</string>
    <string name="trend_daily">daily</string>
    <string name="trend_weekly">weekly</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <!-- weather -->
    <string name="wea_text_hint">城市拼音全称</string>
    <string name="wea_text_btn">查询</string>
    <string name="wea_text_city">城市</string>
    <string name="wea_test_city">福州</string>
    <string name="wea_current_temp">实时</string>
    <string name="wea_test_temp">9°C</string>
    <string name="wea_test_condition">小雨</string>
    <string name="wea_test_wind_condition">微风微风微风微风微风微风</string>
    <string name="wea_test_humidity">99%</string>
    <string name="wea_test_weekday">今天(周一)</string>

    <string name="wea_city_title">选择城市</string>
    <string name="wea_province_btn">省份</string>
    <string name="wea_city_btn">城市</string>

    <!-- status and comment -->
    <string name="comment_suc">评论成功!</string>
    <string name="comment_failed">评论失败!</string>
    <string name="repost_suc">转发成功!</string>
    <string name="repost_failed">转发失败!</string>
    <string name="favorite_add_suc">收藏成功!</string>
    <string name="favorite_add_failed">收藏失败!</string>

    <string name="new_status_suc">发表微博成功!</string>
    <string name="new_status_failed">发表微博失败!</string>

    <!-- line item -->
    <string name="item_test_title">title</string>
    <string name="item_comment">评论0</string>
    <string name="item_repost">转发 0</string>
    <string name="item_from">来自</string>
    <string name="item_time">时间</string>

    <string name="friend_item_btn">关注</string>
    <string name="friend_item_name">name</string>
    <string name="friend_item_content">content</string>

    <string name="out_memory">对不起，您的手机内存不足！建议修改headSize大小。</string>

    <string name="login_error">验证用户失败.如果帐户及密码是正确的，请使用web授权登录。</string>
    <string name="login2_error">验证用户失败.如果帐户及密码是正确的，请联系开发者(archko@sina.com)，Oauth2授权认证失效！</string>
    <string name="login2_run_error">Oauth2授权认证失效,请注销后重新登录，如果还是失败，请联系开发者(archko@sina.com)！</string>
    <string name="login2_suc_error">Oauth2授权认证是正确的，但程序无法处理，请注销后重新登录。</string>

    <string name="oauth_runtime_user_pass_is_null">Token过期,需要重新登录</string>
    <string name="oauth_runtime_failed">认证失败!如果再次失败可以注销后再登录!</string>
    <string name="oauth_runtime_suc">认证成功，请稍候。</string>

    <string name="oauth_suc_user_pass_is_null">Oauth2授权认证是正确的，但程序无法自动处理，过期后需要手动认证!</string>
    <string name="oauth_account_exist">认证的用户已经存在！</string>
    <string name="oauth_token_expired_dialog_title">若认证过期，需要重新登录</string>
</resources>