<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:makeramen="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/content_rl"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <RelativeLayout android:id="@+id/right"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
        android:layout_height="wrap_content" android:layout_width="wrap_content">

        <com.makeramen.RoundedImageView android:id="@+id/iv_portrait"
            android:layout_alignParentRight="true"
            makeramen:corner_radius="24dip"
            makeramen:border_width="0dip" android:layout_marginRight="24dp"
            android:layout_width="42dip" android:layout_height="42dip"
            android:src="@drawable/user_default_photo"
            android:scaleType="center" android:layout_marginTop="0dp"
            android:focusable="false"/>

        <TextView android:id="@+id/tv_name"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/friend_item_name" android:textSize="16sp"
            android:paddingLeft="4dip"
            android:paddingTop="2dp" android:paddingBottom="2dp"
            android:textColor="?attr/textColorItemName"/>

        <Button android:id="@+id/follow_btn"
            android:layout_toLeftOf="@id/iv_portrait"
            android:layout_width="wrap_content" android:layout_height="32dip"
            android:text="@string/friend_item_btn" android:textSize="14sp"
            style="@style/RedButton" android:layout_marginRight="12dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="4dp"
            android:focusable="false"/>
    </RelativeLayout>

    <TextView android:id="@+id/status_content"
        android:layout_below="@id/right"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/friend_item_content"
        android:textSize="16sp" android:maxLines="3" android:paddingRight="4dip"
        android:paddingTop="2dp" android:paddingBottom="2dp"
        android:paddingLeft="4dip" android:textColor="?attr/textColorItemStatus"/>

    <LinearLayout android:layout_marginTop="4dp"
        android:layout_below="@id/status_content"
        android:layout_height="wrap_content" android:layout_width="fill_parent">

        <TextView android:id="@+id/source_from"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/item_from"
            android:textSize="12sp" android:paddingBottom="4dp"
            android:singleLine="true" android:textColor="?attr/textColorItemTopBottom"/>

        <TextView android:id="@+id/send_time"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/item_time"
            android:textSize="12sp" android:paddingBottom="4dp"
            android:layout_marginLeft="6dp"
            android:singleLine="true" android:textColor="?attr/textColorItemTopBottom"/>
    </LinearLayout>
</RelativeLayout>
