<?xml version="1.0" encoding="utf-8"?>
<!-- 时间线布局的头部部分,包含头像,原微博评论数等 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:makeramen="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/right"
    android:layout_alignParentRight="true"
    android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
    android:layout_height="wrap_content" android:layout_width="match_parent">

    <com.makeramen.RoundedImageView android:id="@+id/iv_portrait"
        android:layout_alignParentRight="true"
        makeramen:corner_radius="24dip"
        makeramen:border_color="@color/bg_profile_color"
        makeramen:border_width="2dip" android:layout_marginRight="24dp"
        android:layout_width="@dimen/profile_width_height" android:layout_height="@dimen/profile_width_height"
        android:src="@drawable/user_default_photo"
        android:scaleType="center"
        android:focusable="false"/>

    <TextView android:id="@+id/tv_name"
        android:layout_alignParentLeft="true" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/item_test_title"
        android:textSize="14sp" android:textColor="@color/holo_light_item_name"
        android:paddingLeft="4dip" android:paddingTop="4dip"
        android:clickable="false"/>

    <TextView android:id="@+id/comment_num"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/item_comment"
        android:layout_marginTop="24dp" android:layout_toLeftOf="@id/iv_portrait"
        android:textSize="12sp" android:layout_marginRight="8dip"
        android:paddingTop="2dip" android:textColor="@color/holo_light_item_num"/>

    <TextView android:id="@+id/repost_num"
        android:layout_toLeftOf="@id/comment_num"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/item_repost" android:layout_marginTop="24dp"
        android:textSize="12sp" android:paddingRight="4dip"
        android:paddingTop="2dip" android:textColor="@color/holo_light_item_num"/>

    <TextView
        android:id="@+id/txt_send_time" android:visibility="gone"
        android:layout_toLeftOf="@id/repost_num"
        android:layout_marginTop="24dp"
        android:textSize="12sp" android:layout_marginRight="12dp"
        android:paddingTop="2dip"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:text="@string/text_time" android:textColor="@color/holo_light_item_num"/>

</RelativeLayout>
