<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/content_rl" android:layout_marginBottom="6dp"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <RelativeLayout android:id="@+id/right"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content" android:layout_width="36dip">

        <ImageView android:id="@+id/iv_portrait"
            android:layout_alignParentRight="true"
            android:layout_width="32dip" android:layout_height="32dip"
            android:layout_marginTop="2dip" android:layout_marginBottom="2dip"
            android:layout_marginRight="4dip" android:src="@drawable/user_default_photo"
            android:layout_marginLeft="2dip" android:scaleType="fitCenter"
            android:focusable="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_toLeftOf="@id/right"
        android:layout_alignParentLeft="true" android:paddingLeft="4dp" android:paddingBottom="4dp"
        android:layout_width="fill_parent" android:layout_height="wrap_content">

        <RelativeLayout android:id="@+id/_title"
            android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/tv_name"
                android:layout_alignParentLeft="true" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/item_test_title"
                android:textSize="14sp" android:textColor="?attr/textColorItemName"
                android:paddingLeft="4dip" android:paddingTop="4dip"
                android:clickable="false"/>

            <TextView android:id="@+id/comment_num"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/item_comment" android:layout_alignParentRight="true"
                android:textSize="12sp" android:paddingRight="4dip"
                android:paddingTop="2dip" android:textColor="?attr/textColorItemNum"/>

            <TextView android:id="@+id/repost_num"
                android:layout_toLeftOf="@id/comment_num"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/item_repost"
                android:textSize="12sp" android:paddingRight="4dip"
                android:paddingTop="2dip" android:textColor="?attr/textColorItemNum"/>
        </RelativeLayout>

        <TextView android:id="@+id/tv_content_first"
            android:layout_below="@id/_title"
            android:layout_alignParentLeft="true" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/test"
            android:paddingLeft="4dip" android:paddingTop="4dp"
            android:paddingBottom="2dp" android:bufferType="spannable"
            android:textSize="16sp" android:textColor="?attr/textColorItemStatus"/>

        <ImageView android:id="@+id/status_picture"
            android:layout_below="@id/tv_content_first" android:layout_alignParentRight="true"
            android:minWidth="50dip"
            android:scaleType="centerCrop"
            android:layout_margin="4dip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/image_loading" android:visibility="visible"/>

        <ImageView android:id="@+id/status_picture_lay" android:src="@drawable/gif"
            android:layout_alignLeft="@id/status_picture" android:visibility="gone"
            android:layout_alignBottom="@id/status_picture"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <TextView android:id="@+id/tv_content_sencond"
            android:layout_below="@id/status_picture"
            android:layout_alignParentLeft="true" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/test"
            android:textSize="16sp" android:clickable="false"
            style="?attr/itemRetStatusStyle" android:bufferType="spannable"
            android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
            android:layout_marginLeft="6dip" android:layout_marginRight="6dip"
            android:paddingLeft="8dip" android:paddingRight="4dip"/>

        <LinearLayout android:orientation="vertical"
            android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
            android:layout_below="@id/tv_content_sencond"
            android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="6dip" android:layout_marginRight="6dip">

            <LinearLayout android:id="@+id/loctation_ll"
                android:orientation="horizontal" android:visibility="gone"
                android:paddingBottom="4dp" android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" android:layout_width="fill_parent">

                <ImageView android:src="@drawable/location" android:layout_marginRight="4dp"
                    android:layout_width="20dp" android:layout_height="20dp"/>

                <TextView android:id="@+id/location"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/item_time" android:layout_alignParentRight="true"
                    android:textSize="12sp" android:singleLine="true"
                    android:textColor="?attr/textColorItemTopBottom"
                    android:layout_gravity="center_vertical" android:gravity="center_vertical"/>
            </LinearLayout>

            <RelativeLayout android:layout_marginTop="4dp"
                android:layout_height="wrap_content" android:layout_width="fill_parent">

                <TextView android:id="@+id/source_from"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/item_from" android:layout_alignParentLeft="true"
                    android:textSize="12sp" android:paddingBottom="4dp"
                    android:singleLine="true" android:textColor="?attr/textColorItemTopBottom"/>

                <TextView android:id="@+id/send_time"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/item_time" android:layout_alignParentRight="true"
                    android:textSize="12sp" android:paddingBottom="4dp"
                    android:singleLine="true" android:textColor="?attr/textColorItemTopBottom"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
