<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:makeramen="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:orientation="vertical"
    android:layout_marginLeft="8dip" android:layout_marginRight="8dp"
    android:layout_marginBottom="6dp" android:layout_marginTop="2dp"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <RelativeLayout android:id="@+id/content"
        android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
        android:layout_width="fill_parent" android:layout_height="wrap_content">

        <com.makeramen.RoundedImageView android:id="@+id/iv_portrait"
            android:layout_alignParentRight="true"
            makeramen:corner_radius="24dip"
            makeramen:border_width="0dip" android:layout_marginRight="24dp"
            android:layout_width="40dip" android:layout_height="40dip"
            android:src="@drawable/user_default_photo"
            android:scaleType="center"
            android:focusable="false"/>

        <TextView android:id="@+id/tv_name"
            android:layout_alignParentLeft="true" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/item_test_title"
            android:textSize="14sp" android:textColor="@color/holo_light_item_name"
            android:paddingLeft="4dip" android:paddingTop="4dip"
            android:clickable="false"/>

        <TextView android:id="@+id/tv_content_first"
            android:layout_below="@id/tv_name" android:layout_marginTop="12dp"
            android:layout_alignParentLeft="true" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/test"
            android:paddingLeft="4dip" android:paddingTop="4dp"
            android:paddingBottom="2dp" android:bufferType="spannable"
            android:textSize="16sp" android:textColor="@color/holo_light_item_status"/>

        <LinearLayout android:id="@+id/tv_content_sencond_layout"
            android:layout_width="fill_parent" android:layout_marginTop="4dp"
            android:layout_height="wrap_content" android:visibility="gone"
            android:layout_below="@id/tv_content_first"
            android:layout_alignParentLeft="true">
            <TextView android:id="@+id/left_slider" android:background="@color/holo_blue_light"
                android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
                android:layout_marginLeft="6dp"
                android:layout_width="4dp" android:layout_height="match_parent"/>
            <TextView android:id="@+id/tv_content_sencond"
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:text="@string/test"
                android:textSize="16sp" android:clickable="false"
                android:textColor="@color/holo_light_item_ret_status" android:bufferType="spannable"
                android:layout_marginTop="4dp" android:layout_marginBottom="2dp"
                android:layout_marginLeft="0dip" android:layout_marginRight="6dip"
                android:paddingLeft="8dip" android:paddingRight="4dip"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/content"
        android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
        android:layout_height="wrap_content" android:layout_width="fill_parent">

        <TextView android:id="@+id/source_from"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/item_from" android:layout_alignParentLeft="true"
            android:textSize="12sp" android:paddingBottom="4dp"
            android:singleLine="true" android:textColor="@color/holo_light_item_topbottom"/>

        <TextView android:id="@+id/send_time"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/item_time" android:layout_alignParentRight="true"
            android:textSize="12sp" android:paddingBottom="4dp"
            android:paddingRight="4dp"
            android:singleLine="true" android:textColor="@color/holo_light_item_topbottom"/>
    </RelativeLayout>
</RelativeLayout>
